language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/copy_loc_borrowed_invalid.move
module Tester {
    fun t() {
        let x = 0;
        let r1 = &mut x;
        copy x;
        r1;
    }
}

// check: COPYLOC_EXISTS_BORROW_ERROR
